Update project files.

--- a/Projects/Project1/Project1.vcxproj.filters
+++ b/Projects/Project1/Project1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\ship.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\hydographic_network.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cute\cute.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\hydographic_network.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
