--- a/Projects/Project1/Project1.vcxproj.filters
+++ b/Projects/Project1/Project1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="graphviewer\graphviewer.cpp">
       <Filter>graphviewer</Filter>
     </ClCompile>
+    <ClCompile Include="src\delivery.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cute\cute.h">
@@ -130,6 +133,9 @@
     </ClInclude>
     <ClInclude Include="graphviewer\graphviewer.h">
       <Filter>graphviewer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\delivery.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
