--- a/Projects/Project1/Project1.vcxproj.filters
+++ b/Projects/Project1/Project1.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="src\Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\hydographic_network.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="graphviewer\connection.cpp">
       <Filter>graphviewer</Filter>
     </ClCompile>
@@ -34,6 +31,9 @@
       <Filter>graphviewer</Filter>
     </ClCompile>
     <ClCompile Include="src\delivery.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\hydrographic_network.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -119,9 +119,6 @@
     <ClInclude Include="src\order.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\hydographic_network.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -135,6 +132,9 @@
       <Filter>graphviewer</Filter>
     </ClInclude>
     <ClInclude Include="src\delivery.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\hydrographic_network.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
