--- a/Projects/Project2/Project2.vcxproj
+++ b/Projects/Project2/Project2.vcxproj
@@ -13,6 +13,12 @@
   <ItemGroup>
     <ClInclude Include="dirent\dirent.h" />
     <ClInclude Include="src\bytebuffer.h" />
+    <ClInclude Include="src\compression_algorithm.h" />
+    <ClInclude Include="src\compress_huffman_adaptive.h" />
+    <ClInclude Include="src\compress_keyword_encoding.h" />
+    <ClInclude Include="src\compress_lzw.h" />
+    <ClInclude Include="src\compress_rle.h" />
+    <ClInclude Include="src\compress_huffman_static.h" />
     <ClInclude Include="src\consolereader.h" />
     <ClInclude Include="src\file.h" />
     <ClInclude Include="src\loader.h" />
@@ -21,6 +27,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\bytebuffer.cpp" />
+    <ClCompile Include="src\compress_huffman_adaptive.cpp" />
+    <ClCompile Include="src\compress_keyword_encoding.cpp" />
+    <ClCompile Include="src\compress_lzw.cpp" />
+    <ClCompile Include="src\compress_rle.cpp" />
+    <ClCompile Include="src\compress_huffman_static.cpp" />
     <ClCompile Include="src\file.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\menu.cpp" />
