--- a/Projects/Project2/Project2.vcxproj.filters
+++ b/Projects/Project2/Project2.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="src\compress_huffman_adaptive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\bytebuffer_comparator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\bytebuffer.cpp">
@@ -90,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\compression_algorithm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\bytebuffer_comparator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
