--- a/Projects/Project2/Project2.vcxproj
+++ b/Projects/Project2/Project2.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dirent\dirent.h" />
+    <ClInclude Include="src\benchmark.h" />
     <ClInclude Include="src\bytebuffer.h" />
     <ClInclude Include="src\bytebuffer_comparator.h" />
     <ClInclude Include="src\compression_algorithm.h" />
@@ -21,7 +22,10 @@
     <ClInclude Include="src\compress_rle.h" />
     <ClInclude Include="src\compress_huffman_static.h" />
     <ClInclude Include="src\consolereader.h" />
+    <ClInclude Include="src\data_input.h" />
     <ClInclude Include="src\file.h" />
+    <ClInclude Include="src\generator_file_read.h" />
+    <ClInclude Include="src\generator_random_words.h" />
     <ClInclude Include="src\loader.h" />
     <ClInclude Include="src\menu.h" />
     <ClInclude Include="src\utils.h" />
@@ -36,6 +40,8 @@
     <ClCompile Include="src\compress_rle.cpp" />
     <ClCompile Include="src\compress_huffman_static.cpp" />
     <ClCompile Include="src\file.cpp" />
+    <ClCompile Include="src\generator_file_read.cpp" />
+    <ClCompile Include="src\generator_random_words.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\menu.cpp" />
     <ClCompile Include="src\utils.cpp" />
