Add generator random chars

--- a/Projects/Project2/Project2.vcxproj.filters
+++ b/Projects/Project2/Project2.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="src\generator_random_words.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\generator_random_chars.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\bytebuffer.cpp">
@@ -114,6 +117,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\generator_random_words.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generator_random_chars.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
