--- a/Projects/Project2/Project2.vcxproj
+++ b/Projects/Project2/Project2.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="src\data_input.h" />
     <ClInclude Include="src\file.h" />
     <ClInclude Include="src\generator_file_read.h" />
+    <ClInclude Include="src\generator_random_chars.h" />
     <ClInclude Include="src\generator_random_words.h" />
     <ClInclude Include="src\loader.h" />
     <ClInclude Include="src\menu.h" />
@@ -49,6 +50,7 @@
     <ClCompile Include="src\compress_huffman_static.cpp" />
     <ClCompile Include="src\file.cpp" />
     <ClCompile Include="src\generator_file_read.cpp" />
+    <ClCompile Include="src\generator_random_chars.cpp" />
     <ClCompile Include="src\generator_random_words.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\menu.cpp" />
