--- a/Projects/Project2/Project2.vcxproj.filters
+++ b/Projects/Project2/Project2.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -208,6 +208,9 @@
     </ClCompile>
     <ClCompile Include="sparsehash\windows\port.cc">
       <Filter>sparsehash\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="src\tree.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
