--- a/Projects/Project2/Project2.vcxproj.filters
+++ b/Projects/Project2/Project2.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClInclude Include="src\bytebuffer_comparator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\benchmark.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\data_input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -155,6 +152,9 @@
     </ClInclude>
     <ClInclude Include="sparsehash\windows\sparsehash\internal\sparseconfig.h">
       <Filter>sparsehash\windows\sparsehash\internal</Filter>
+    </ClInclude>
+    <ClInclude Include="src\benchmark_data.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
